add ne stuff and finetune sitebuild

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,14 @@
 /* global: overrides bootstrap font with a Google Fonts */
-@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed&display=swap');
 
 * {
-  font-family: 'PT Sans Narrow', sans-serif;
+  font-family: 'Encode Sans Condensed', sans-serif;
 }
 
 /* 404, footer */
 .resized-logo {
   height: 100%;
-  width: 120px;
+  width: 140px;
 }
 
 /* header */
@@ -17,11 +17,15 @@
 }
 .social-link-style {
   display: inline-block;
-  width: 104px;
+  width: 113px;
 }
 .social-img-style {
   margin-right: 0.5em;
   height: 22px;
+}
+.input-label-style {
+  font-size: 2.5rem;
+  line-height: 1.2;
 }
 
 /* details */
